--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#8000000F",
-    "navigationBarTitleText": "voteforyou",
+    "navigationBarTitleText": "Vote",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
@@ -38,5 +38,6 @@
         "text": "我的"
       }
     ]
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
